# CrimsonDesertTools

./: .gitignore  .gitmodules  README.md
.github/ISSUE_TEMPLATE/: bug_report.yaml
.github/workflows/: deploy-pages.yml  release-equiphide.yml  release-livetransmog.yml
CrimsonDesertCore/: .clang-format  .clang-tidy  .editorconfig  CMakeLists.txt
CrimsonDesertCore/dev/: loader_main.cpp
CrimsonDesertCore/include/cdcore/: anchors.hpp  aob_resolver.hpp  controlled_char.hpp  dev_helpers.hpp  dmk_glue.hpp  indexed_string_table.hpp  prologue_check.hpp
CrimsonDesertCore/src/: aob_resolver.cpp  controlled_char.cpp  dev_helpers.cpp  dmk_glue.cpp  indexed_string_table.cpp  prologue_check.cpp
CrimsonDesertEquipHide/: .clang-format  .clang-tidy  .editorconfig  CHANGELOG.md  CMakeLists.txt  CMakePresets.json  README.md
CrimsonDesertEquipHide/docs/: NEXT_CHANGELOG.md  nexus-bbcode.txt
CrimsonDesertEquipHide/docs/archive/: CHANGELOG_v0.2.1.md  CHANGELOG_v0.2.2.md  CHANGELOG_v0.2.3.md  CHANGELOG_v0.3.0.md  CHANGELOG_v0.3.1.md  CHANGELOG_v0.4.0.md  CHANGELOG_v0.5.0.md  CHANGELOG_v0.5.1.md  CHANGELOG_v0.5.2.md  CHANGELOG_v0.6.1.md  CHANGELOG_v0.7.0.md  CHANGELOG_v0.7.1.md  CHANGELOG_v0.7.2.md  CHANGELOG_v0.7.3.md  CHANGELOG_v0.8.0.md  CHANGELOG_v0.8.1.md  CHANGELOG_v0.8.2.md  CHANGELOG_v0.8.4.md
CrimsonDesertEquipHide/scripts/: version_updater.py
CrimsonDesertEquipHide/src/: aob_resolver.cpp  aob_resolver.hpp  armor_injection.cpp  armor_injection.hpp  background_threads.cpp  background_threads.hpp  bald_fix.cpp  bald_fix.hpp  cascade_suppress.cpp  cascade_suppress.hpp  categories.cpp  categories.hpp  constants.hpp  dllmain.cpp  equip_hide.cpp  equip_hide.hpp  gliding_fix.cpp  gliding_fix.hpp  indexed_string_table.cpp  indexed_string_table.hpp  input_handler.cpp  input_handler.hpp  player_detection.cpp  player_detection.hpp  shared_state.cpp  shared_state.hpp  version.cpp  version.hpp  visibility_write.cpp  visibility_write.hpp
CrimsonDesertEquipHide/src/dev/: loader_main.cpp  logic_exports.cpp
CrimsonDesertLiveTransmog/: .clang-format  .clang-tidy  .editorconfig  CHANGELOG.md  CMakeLists.txt  CMakePresets.json  CrimsonDesertLiveTransmog_display_names.tsv  README.md
CrimsonDesertLiveTransmog/docs/: NEXT_CHANGELOG.md  nexus-bbcode.txt
CrimsonDesertLiveTransmog/docs/archive/: CHANGELOG_v0.10.0.md  CHANGELOG_v0.11.0.md  CHANGELOG_v0.11.1.md  CHANGELOG_v0.11.2.md  CHANGELOG_v0.11.3.md  CHANGELOG_v0.12.0.md  CHANGELOG_v0.12.4.md  CHANGELOG_v0.12.5.md  CHANGELOG_v0.12.6.md  CHANGELOG_v0.12.7.md  CHANGELOG_v0.2.0.md  CHANGELOG_v0.3.0.md  CHANGELOG_v0.5.0.md  CHANGELOG_v0.6.2.md  CHANGELOG_v0.6.3.md  CHANGELOG_v0.6.4.md  CHANGELOG_v0.7.0.md  CHANGELOG_v0.8.0.md  CHANGELOG_v0.9.0.md  CHANGELOG_v0.9.2.md  CHANGELOG_v0.9.3.md  CHANGELOG_v0.9.4.md
CrimsonDesertLiveTransmog/docs/research/: README.md  live-transmog-architecture.md  live-transmog-source-of-truth.md
CrimsonDesertLiveTransmog/scripts/: refresh_reshade_populator.sh  version_updater.py
CrimsonDesertLiveTransmog/src/: aob_resolver.cpp  aob_resolver.hpp  body_variant_hook.cpp  body_variant_hook.hpp  carrier_defaults.hpp  constants.hpp  dllmain.cpp  dx_overlay.cpp  dx_overlay.hpp  dye_record_inject.cpp  dye_record_inject.hpp  helm_audio_filter.cpp  helm_audio_filter.hpp  imgui_function_table_populator.cpp  imgui_function_table_populator.hpp  indexed_string_table.cpp  indexed_string_table.hpp  input_handler.cpp  input_handler.hpp  item_name_table.cpp  item_name_table.hpp  itemmesh_dumper.cpp  itemmesh_dumper.hpp  overlay.cpp  overlay.hpp  overlay_reshade.cpp  overlay_ui.cpp  overlay_ui.inl  part_show_suppress.cpp  part_show_suppress.hpp  prefab_wrapper_swap.cpp  prefab_wrapper_swap.hpp  preset_manager.cpp  preset_manager.hpp  real_part_tear_down.cpp  real_part_tear_down.hpp  shared_state.cpp  shared_state.hpp  slot_metadata.hpp  transmog.cpp  (+11 more)
CrimsonDesertLiveTransmog/src/color_override/: color_carrier_set.cpp  color_carrier_set.hpp  color_matinst_owner.cpp  color_matinst_owner.hpp  color_override.cpp  color_override.hpp  color_pending_overrides.cpp  color_pending_overrides.hpp  color_picker_state.cpp  color_picker_state.hpp  color_publisher_hook.cpp  color_publisher_hook.hpp  color_reinit.cpp  color_reinit.hpp  color_state.cpp  color_state.hpp  color_swatch_table.cpp  color_swatch_table.hpp  color_token_discovery.cpp  color_token_discovery.hpp  color_token_interner_hook.cpp  color_token_interner_hook.hpp  color_token_table.cpp  color_token_table.hpp  host_scope.cpp  host_scope.hpp  matinst_probe.cpp  matinst_probe.hpp  one_shot_log_set.hpp  setter_substitute.cpp  setter_substitute.hpp
CrimsonDesertLiveTransmog/src/dev/: loader_main.cpp  logic_exports.cpp
CrimsonDesertLiveTransmog/src/overlay_ui/: color_override.cpp  color_override.hpp  dye_popup.cpp  dye_popup.hpp  footer.cpp  footer.hpp  helpers.cpp  helpers.hpp  item_picker_popup.cpp  item_picker_popup.hpp  state.hpp  transmog_tab.cpp  transmog_tab.hpp
docs/catalog-src/: package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
docs/catalog-src/src/: App.svelte  app.css  catalog.html  index.html  (+1 more)
docs/live-transmog/: CrimsonDesertLiveTransmog_display_names_v1.10.00.tsv  CrimsonDesertLiveTransmog_display_names_v1.12.00.tsv  CrimsonDesertLiveTransmog_display_names_v1.13.00.tsv  CrimsonDesertLiveTransmog_itemprefabs_v1.07.00.tsv  CrimsonDesertLiveTransmog_itemprefabs_v1.08.00.tsv  CrimsonDesertLiveTransmog_itemprefabs_v1.09.00.tsv  CrimsonDesertLiveTransmog_itemprefabs_v1.10.00.tsv  CrimsonDesertLiveTransmog_itemprefabs_v1.12.00.tsv  CrimsonDesertLiveTransmog_itemprefabs_v1.13.00.tsv  CrimsonDesertLiveTransmog_items_v1.03.01.tsv  CrimsonDesertLiveTransmog_items_v1.04.00.tsv  CrimsonDesertLiveTransmog_items_v1.07.00.tsv  CrimsonDesertLiveTransmog_items_v1.09.00.tsv  CrimsonDesertLiveTransmog_items_v1.10.00.tsv  CrimsonDesertLiveTransmog_items_v1.12.00.tsv  CrimsonDesertLiveTransmog_items_v1.13.00.tsv  index.html
docs/research/: README.md  combat-state-research.md  live-transmog-architecture.md  live-transmog-prefab-wrapper-swap.md  live-transmog-source-of-truth.md
(+9 files in other folders)
